// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call createScene twice on same routes 1`] = `
Object {
  "FOURTH": "double/scene/FOURTH",
  "FOURTH_COMPLETE": "double/scene/FOURTH_COMPLETE",
  "FOURTH_DONE": "double/scene/FOURTH_DONE",
  "FOURTH_ERROR": "double/scene/FOURTH_ERROR",
  "FOURTH_START": "double/scene/FOURTH_START",
  "NOT_FOUND": "double/scene/NOT_FOUND",
  "NOT_FOUND_COMPLETE": "double/scene/NOT_FOUND_COMPLETE",
  "NOT_FOUND_DONE": "double/scene/NOT_FOUND_DONE",
  "NOT_FOUND_ERROR": "double/scene/NOT_FOUND_ERROR",
  "NOT_FOUND_START": "double/scene/NOT_FOUND_START",
  "PLAIN": "double/scene/PLAIN",
  "PLAIN_COMPLETE": "double/scene/PLAIN_COMPLETE",
  "PLAIN_DONE": "double/scene/PLAIN_DONE",
  "PLAIN_ERROR": "double/scene/PLAIN_ERROR",
  "PLAIN_START": "double/scene/PLAIN_START",
  "SECOND": "double/scene/SECOND",
  "SECOND_COMPLETE": "double/scene/SECOND_COMPLETE",
  "SECOND_DONE": "double/scene/SECOND_DONE",
  "SECOND_ERROR": "double/scene/SECOND_ERROR",
  "SECOND_START": "double/scene/SECOND_START",
  "THIRD": "double/scene/THIRD",
  "THIRD_COMPLETE": "double/scene/THIRD_COMPLETE",
  "THIRD_DONE": "double/scene/THIRD_DONE",
  "THIRD_ERROR": "double/scene/THIRD_ERROR",
  "THIRD_START": "double/scene/THIRD_START",
}
`;

exports[`call createScene twice on same routes 2`] = `
Object {
  "fourth": [Function],
  "notFound": [Function],
  "plain": [Function],
  "second": [Function],
  "third": [Function],
}
`;

exports[`call createScene twice on same routes 3`] = `
Object {
  "double/scene/FOURTH": Object {
    "action": Array [
      "customCreator",
    ],
    "customCreator": [Function],
    "path": "/fourth",
    "scene": "double/scene",
  },
  "double/scene/NOT_FOUND": Object {
    "path": "/not-found-foo",
    "scene": "double/scene",
  },
  "double/scene/PLAIN": Object {
    "action": [Function],
    "scene": "double/scene",
  },
  "double/scene/SECOND": Object {
    "error": [Function],
    "path": "/second",
    "scene": "double/scene",
  },
  "double/scene/THIRD": Object {
    "action": [Function],
    "path": "/third",
    "scene": "double/scene",
  },
}
`;

exports[`call createScene twice on same routes 4`] = `
"const { types, actions } = createScene(routes, { scene: 'double/scene' })

const { 
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	SECOND_START,
	SECOND_DONE,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	THIRD_START,
	THIRD_DONE,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	FOURTH_START,
	FOURTH_DONE,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	PLAIN_START,
	PLAIN_DONE,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR,
	NOT_FOUND_START,
	NOT_FOUND_DONE
} = types

const { 
	second,
	third,
	fourth,
	plain,
	notFound
} = actions

export {
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	SECOND_START,
	SECOND_DONE,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	THIRD_START,
	THIRD_DONE,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	FOURTH_START,
	FOURTH_DONE,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	PLAIN_START,
	PLAIN_DONE,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR,
	NOT_FOUND_START,
	NOT_FOUND_DONE
}

export {
	second,
	third,
	fourth,
	plain,
	notFound
}"
`;

exports[`createScene returns types, actions, routes, exportString (/w scene + basename options) 1`] = `
Object {
  "FOURTH": "SCENE/FOURTH",
  "FOURTH_COMPLETE": "SCENE/FOURTH_COMPLETE",
  "FOURTH_DONE": "SCENE/FOURTH_DONE",
  "FOURTH_ERROR": "SCENE/FOURTH_ERROR",
  "FOURTH_START": "SCENE/FOURTH_START",
  "NOT_FOUND": "SCENE/NOT_FOUND",
  "NOT_FOUND_COMPLETE": "SCENE/NOT_FOUND_COMPLETE",
  "NOT_FOUND_DONE": "SCENE/NOT_FOUND_DONE",
  "NOT_FOUND_ERROR": "SCENE/NOT_FOUND_ERROR",
  "NOT_FOUND_START": "SCENE/NOT_FOUND_START",
  "PLAIN": "SCENE/PLAIN",
  "PLAIN_COMPLETE": "SCENE/PLAIN_COMPLETE",
  "PLAIN_DONE": "SCENE/PLAIN_DONE",
  "PLAIN_ERROR": "SCENE/PLAIN_ERROR",
  "PLAIN_START": "SCENE/PLAIN_START",
  "SECOND": "SCENE/SECOND",
  "SECOND_COMPLETE": "SCENE/SECOND_COMPLETE",
  "SECOND_DONE": "SCENE/SECOND_DONE",
  "SECOND_ERROR": "SCENE/SECOND_ERROR",
  "SECOND_START": "SCENE/SECOND_START",
  "THIRD": "SCENE/THIRD",
  "THIRD_COMPLETE": "SCENE/THIRD_COMPLETE",
  "THIRD_DONE": "SCENE/THIRD_DONE",
  "THIRD_ERROR": "SCENE/THIRD_ERROR",
  "THIRD_START": "SCENE/THIRD_START",
}
`;

exports[`createScene returns types, actions, routes, exportString (/w scene + basename options) 2`] = `
Object {
  "fourth": [Function],
  "notFound": [Function],
  "plain": [Function],
  "second": [Function],
  "third": [Function],
}
`;

exports[`createScene returns types, actions, routes, exportString (/w scene + basename options) 3`] = `
Object {
  "SCENE/FOURTH": Object {
    "action": Array [
      "customCreator",
    ],
    "customCreator": [Function],
    "path": "/fourth",
    "scene": "SCENE",
  },
  "SCENE/NOT_FOUND": Object {
    "path": "/not-found-foo",
    "scene": "SCENE",
  },
  "SCENE/PLAIN": Object {
    "action": [Function],
    "scene": "SCENE",
  },
  "SCENE/SECOND": Object {
    "error": [Function],
    "path": "/second",
    "scene": "SCENE",
  },
  "SCENE/THIRD": Object {
    "action": [Function],
    "path": "/third",
    "scene": "SCENE",
  },
}
`;

exports[`createScene returns types, actions, routes, exportString (/w scene + basename options) 4`] = `
"const { types, actions } = createScene(routes, { scene: 'SCENE', basename: '/base-name' })

const { 
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	SECOND_START,
	SECOND_DONE,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	THIRD_START,
	THIRD_DONE,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	FOURTH_START,
	FOURTH_DONE,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	PLAIN_START,
	PLAIN_DONE,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR,
	NOT_FOUND_START,
	NOT_FOUND_DONE
} = types

const { 
	second,
	third,
	fourth,
	plain,
	notFound
} = actions

export {
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	SECOND_START,
	SECOND_DONE,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	THIRD_START,
	THIRD_DONE,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	FOURTH_START,
	FOURTH_DONE,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	PLAIN_START,
	PLAIN_DONE,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR,
	NOT_FOUND_START,
	NOT_FOUND_DONE
}

export {
	second,
	third,
	fourth,
	plain,
	notFound
}"
`;

exports[`createScene returns types, actions, routes, exportString 1`] = `
Object {
  "FOURTH": "FOURTH",
  "FOURTH_COMPLETE": "FOURTH_COMPLETE",
  "FOURTH_DONE": "FOURTH_DONE",
  "FOURTH_ERROR": "FOURTH_ERROR",
  "FOURTH_START": "FOURTH_START",
  "NOT_FOUND": "NOT_FOUND",
  "NOT_FOUND_COMPLETE": "NOT_FOUND_COMPLETE",
  "NOT_FOUND_DONE": "NOT_FOUND_DONE",
  "NOT_FOUND_ERROR": "NOT_FOUND_ERROR",
  "NOT_FOUND_START": "NOT_FOUND_START",
  "PLAIN": "PLAIN",
  "PLAIN_COMPLETE": "PLAIN_COMPLETE",
  "PLAIN_DONE": "PLAIN_DONE",
  "PLAIN_ERROR": "PLAIN_ERROR",
  "PLAIN_START": "PLAIN_START",
  "SECOND": "SECOND",
  "SECOND_COMPLETE": "SECOND_COMPLETE",
  "SECOND_DONE": "SECOND_DONE",
  "SECOND_ERROR": "SECOND_ERROR",
  "SECOND_START": "SECOND_START",
  "THIRD": "THIRD",
  "THIRD_COMPLETE": "THIRD_COMPLETE",
  "THIRD_DONE": "THIRD_DONE",
  "THIRD_ERROR": "THIRD_ERROR",
  "THIRD_START": "THIRD_START",
}
`;

exports[`createScene returns types, actions, routes, exportString 2`] = `
Object {
  "fourth": [Function],
  "notFound": [Function],
  "plain": [Function],
  "second": [Function],
  "third": [Function],
}
`;

exports[`createScene returns types, actions, routes, exportString 3`] = `
Object {
  "FOURTH": Object {
    "action": Array [
      "customCreator",
    ],
    "customCreator": [Function],
    "path": "/fourth",
    "scene": "",
  },
  "NOT_FOUND": Object {
    "path": "/not-found-foo",
    "scene": "",
  },
  "PLAIN": Object {
    "action": [Function],
    "scene": "",
  },
  "SECOND": Object {
    "error": [Function],
    "path": "/second",
    "scene": "",
  },
  "THIRD": Object {
    "action": [Function],
    "path": "/third",
    "scene": "",
  },
}
`;

exports[`createScene returns types, actions, routes, exportString 4`] = `
"const { types, actions } = createScene(routes, { scene: '' })

const { 
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	SECOND_START,
	SECOND_DONE,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	THIRD_START,
	THIRD_DONE,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	FOURTH_START,
	FOURTH_DONE,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	PLAIN_START,
	PLAIN_DONE,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR,
	NOT_FOUND_START,
	NOT_FOUND_DONE
} = types

const { 
	second,
	third,
	fourth,
	plain,
	notFound
} = actions

export {
	SECOND,
	SECOND_COMPLETE,
	SECOND_ERROR,
	SECOND_START,
	SECOND_DONE,
	THIRD,
	THIRD_COMPLETE,
	THIRD_ERROR,
	THIRD_START,
	THIRD_DONE,
	FOURTH,
	FOURTH_COMPLETE,
	FOURTH_ERROR,
	FOURTH_START,
	FOURTH_DONE,
	PLAIN,
	PLAIN_COMPLETE,
	PLAIN_ERROR,
	PLAIN_START,
	PLAIN_DONE,
	NOT_FOUND,
	NOT_FOUND_COMPLETE,
	NOT_FOUND_ERROR,
	NOT_FOUND_START,
	NOT_FOUND_DONE
}

export {
	second,
	third,
	fourth,
	plain,
	notFound
}"
`;
